--- a/pom.xml
+++ b/pom.xml
@@ -25,9 +25,9 @@
 			<version>4.3</version>
 		</dependency> -->
 		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpasyncclient</artifactId>
-			<version>4.0-beta4</version>
+		  <groupId>com.ning</groupId>
+		  <artifactId>async-http-client</artifactId>
+		  <version>1.7.19</version>
 		</dependency>
   </dependencies>
   <build>
